--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/form.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/form.scala.html
@@ -10,7 +10,7 @@
     @helper.form(action = controllers.routes.Tvn.submit) {
         
         <fieldset>
-            <legend>Account informations</legend>
+            <legend>Category informations</legend>
             
             @inputText(
                 categoryForm("name"), 
