--- a/NoticiasTVN/web/TvnAdmin/app/views/banner/list.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/banner/list.scala.html
@@ -90,9 +90,7 @@
                             }
                         </td> 
                         <td style="text-align: center;" >
-                        
-                        	<a href="@controllers.routes.Banner.blankFile(banner.getIdBanner())">(@banner.getFileList().length)</a>
-                        	<!--a href="@controllers.routes.Banner.listFile(banner.getIdBanner())">(@banner.getFileList().length)</a-->
+                        	<a href="@controllers.routes.Banner.listFile(banner.getIdBanner())">(@banner.getFileList().length)</a>
                         </td>                       
                     </tr>
                 }
