--- a/NoticiasTVN/web/TvnAdmin/app/views/banner/list.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/banner/list.scala.html
@@ -90,7 +90,7 @@
                             }
                         </td> 
                         <td style="text-align: center;" >
-                        	<a href="@controllers.routes.Banner.listFile(banner.getIdBanner())">(@banner.getFileList().length)</a>
+                        	@banner.getFileList().length
                         </td>                       
                     </tr>
                 }
