--- a/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
@@ -1,15 +1,181 @@
-@(title: String)(content: Html)
+@(title: Html, nav: String = "")(content: Html)
 
 <!DOCTYPE html>
 
 <html>
     <head>
-        <title>@title</title>
+    	
+        <title>Tvn</title>
+        
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-ui-1.10.4.js")" type="text/javascript"></script>        
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        
+		<script>
+	  		$(function() {
+	  		
+	  		
+	  			$(document).on('click','.cancel', function() {
+	  				
+	  				var _img = $('#' + $(this).data('img'));
+	  				var _input = $('input[data-img="' + $(this).data('img') + '"]');
+	  				
+	  				_img.attr('src',_img.data('src'));	
+	  				_input.val('');			
+	  				$(this).hide();
+
+	  			});	  	
+	  		
+	  			$(document).on('change','input[type=file]', function() {	  			
+	  				  				
+	  				var _img = $('#' + $(this).data('img'));
+	  				var _cancel = $('a[data-img="' + $(this).data('img') + '"]');
+	  				
+					var files = !!this.files ? this.files : [];
+        			if (!files.length || !window.FileReader) {
+        				_img.attr('src',_img.data('src'));
+        				_cancel.hide();
+        				return; 	
+        			};	// no file selected, or no FileReader support
+ 
+	        		if (/^image/.test(files[0].type)) { // only image file
+	            		var reader = new FileReader(); // instance of the FileReader
+	            		reader.readAsDataURL(files[0]); // read the local file 
+	            		reader.onloadend = function() { // set image data as background of div
+	            			_img.attr('src',this.result);	            			
+	            			_img.show();
+	            			_cancel.show();						  
+	            		};
+	       		 	} else {
+	       		 		_img.val('');
+	       		 		_img.attr('src',_img.data('src'));	
+	       		 	};
+
+    			});
+	  			
+	  			
+	  			$("#alert").click(
+	  				function () {
+	  					$(this).toggle();
+	  				}
+	  			);
+
+	  			
+	    		$( "#sortable tbody").sortable();	    		
+	    		$( "#sortable tbody").disableSelection();
+
+	    		$("#ajax").click(
+	    			function () {
+	    				
+	    				var arrC = [];
+	    				var url="";
+	    					    					    			
+	    				$("#sortable tbody tr").each(function (i) {
+	    					arrC.push($(this).data("id"));
+	    				});
+	    					
+						arrC =arrC.join(',');	
+	    				$.ajax({
+  							url: '/banner/sort/'+ arrC,
+  							success: function(data) {
+  								$('#alert').show();
+  							}
+  						});
+	    				
+                		return false;
+
+		            }
+    			);
+
+
+
+
+
+	  		});
+	  		
+				  		
+	  		
+  		</script>
+		<style>
+			.ui-sortable-helper {width:950px; height:40px;}
+		</style>
+		
     </head>
     <body>
-        @content
+        
+        <div class="topbar">
+            <div class="fill">
+                <div class="container">
+                	
+                    <a class="brand" href="@controllers.routes.Application.index()">INICIO</a>
+                    
+                    <ul class="nav">
+
+				 		<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorías<span class="caret"></span></a>
+				          	<ul class="dropdown-menu" role="menu">
+					            <li><a href="@controllers.routes.Tvn.list()">Listar</a></li>
+					            <li><a href="@controllers.routes.Tvn.lsort()">Ordenar</a></li>
+					             <li class="divider"></li>
+					            <li><a href="@controllers.routes.Tvn.blank()">Crear</a></li>
+				          	</ul>
+				        </li>                        	
+                        	
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Banners<span class="caret"></span></a>
+				          	<ul class="dropdown-menu" role="menu">
+					            <li><a href="@controllers.routes.Banner.list()">Listar</a></li>
+					            <li><a href="@controllers.routes.Banner.lsort()">Ordenar</a></li> 
+					            <li class="divider"></li>					            
+					            <li><a href="@controllers.routes.Banner.blank()">Crear</a></li>
+				          	</ul>
+				        </li>                        	
+                        
+                        <li>		 
+                            <a href="@securesocial.controllers.routes.LoginPage.logout()">Salir</a>
+                        </li>
+                        				
+                    </ul>
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+
+            <div class="content">
+                
+                <div class="page-header">
+                    <!--h1>@title</h1-->
+                    <!--img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 250px; height:69px" >
+                    <img src="@routes.Assets.at("images/logo-tvn.png")" style="width: 250px; height:69px" -->
+                    
+                    <img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 15%; height:auto;" />
+           			<img src="@routes.Assets.at("images/logo-apple-store.png")" style="width:5%; height:auto;" />
+            		<img src="@routes.Assets.at("images/logo-google-play.png")" style="width:20%; height:auto;" />        	            	
+            		<img src="@routes.Assets.at("images/logo-tvn.png")" style="width:15%; height:auto;" />
+                    
+                </div>
+
+                <div class="row">
+                    <div class="span14">
+                        @content
+                    </div>
+                </div>
+                
+            </div>
+
+            <footer>				
+                <p>
+                    <a href="http://www.hecticus.com">www.hecticus.com</a>
+                </p>
+            </footer>
+
+        </div>
+        
     </body>
 </html>
