--- a/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
@@ -9,22 +9,23 @@
     
     <h1>Edit Banner</h1>
     
-    @form(controllers.routes.Banner.update(id), 'enctype -> "multipart/form-data") {
+     @helper.form(controllers.routes.Banner.update(id), 'enctype -> "multipart/form-data") {
         
         <fieldset>
         	<legend>Banner informations</legend>
         	
-        	@inputText(bannerForm("name"), '_label -> "Name", '_help -> "Please choose a valid name.", '_error -> bannerForm.globalError)
-        	@inputText(bannerForm("link"), '_label -> "Link", '_help -> "Please choose a valid link.", '_error -> bannerForm.globalError)
-        	@textarea(bannerForm("description"), '_label -> "Description", 'cols -> 50, '_help -> "Please choose a valid description.")                        
+        	@inputText(bannerForm("name"), '_label -> "Nombre", '_help -> "Ingrese un nombre válido.", '_error -> bannerForm.globalError)
+        	@inputText(bannerForm("link"), '_label -> "Url", '_help -> "Ingrese una url válida.", '_error -> bannerForm.globalError)
+        	@textarea(bannerForm("description"), '_label -> "Descripción", 'cols -> 50, '_help -> "Ingrese una descripción valida.")                        
             
              @select(
                 bannerForm("status"), 
                 options("0"-> "Inactivo", "1"-> "Active"),
-                '_default -> "--- Status ---",
-                '_label -> "Status",
-                '_error -> bannerForm("status").error.map(_.withMessage("Please select the status")),
-                'showConstraints -> true
+                '_default -> "--- Seleccione ---",
+                '_label -> "Estatus",
+                '_error -> bannerForm("status").error.map(_.withMessage("Selecciona una opción.")),
+                'showConstraints -> true,
+                '_help -> "Requerido."
             )
 			
         </fieldset>
@@ -37,7 +38,7 @@
 	    				<img id="@file.getIdBannerFile()" src="@file.getLocation()" alt="@file.getName()" data-src="@file.getLocation()" style="width:75%; height: auto; vertical-align: middle">						
 						<input type="file" name="@file.getIdBannerFile()" data-img="@file.getIdBannerFile()" > 
 	        			<span class="help-inline"></span>
-	        			<span class="help-block">Please choose a valid resolution of width @file.getWidth().</span>
+	        			<span class="help-block">Seleccione un banner con una dimensión ajustada en un ancho de @file.getWidth()px.</span>
 	        			<a class="cancel" data-img="@file.getIdBannerFile()" style="cursor: pointer; display: none;">Cancel</a>
 	    			</div>
 				</div>
@@ -46,14 +47,14 @@
         </fieldset>
   
         <div class="actions">        	        	
-            <input type="submit" value="Save this banner" onclick="return confirm('Are you sure?');" class="btn primary"> or 
-            <a href="@controllers.routes.Banner.list()" class="btn">Cancel</a> 
+            <input type="submit" value="Actualizar este banner" onclick="return confirm('Está seguro?');" class="btn primary"> o 
+            <a href="@controllers.routes.Banner.list()" class="btn">Cancelar</a> 
         </div>
             
     }
     
     @form(controllers.routes.Banner.delete(id), 'class -> "topRight") {
-		<input type="submit" value="Delete this banner" onclick="return confirm('Are you sure?');" class="btn danger">
+		<input type="submit" value="Delete this banner" onclick="return confirm('Está seguro?');" class="btn danger">
     }
        
 }
