--- a/NoticiasTVN/web/TvnAdmin/app/views/tvn/list.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/tvn/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: com.avaje.ebean.Page[models.news.Category], currentSortBy: String, currentOrder: String, currentFilter: String)
+@(currentPage: com.avaje.ebean.Page[models.news.Category], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
 
 @****************************************
 * Helper generating navigation links    *
@@ -43,83 +43,126 @@
 
     @if(flash.containsKey("success")) {
         <div class="alert-message warning">
-            <strong>Done!</strong> @flash.get("success")
+            <strong>Hecho!</strong> @flash.get("success")
         </div>
     } 
 
 	<div id="alert" class="alert-message warning" style="display: none; ">
-        <strong>Done!</strong>
+        <strong>Hecho!</strong>
     </div>
 
 
     <div id="actions">        
         <form action="@link(0, "name")" method="GET">
-            <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by category name...">
-            <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
-            <a class="btn success" id="add" href="@controllers.routes.Tvn.blank">Add a new category</a>
+        	
+        	@if(!sortView) {
+        		<input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filtrar por nombre de categoría...">
+        		<input type="submit" id="searchsubmit" value="Filtrar por nombre" class="btn primary">	
+        	}
+        	 
+        	<a class="btn success" id="add" href="@controllers.routes.Tvn.blank">Agregar nueva categoría</a>
+        	
+        	@if(sortView) {        		
+        		<a class="btn success" id="ajax" href="#" data-url="/tvn/sort/">Aplicar</a>
+        	}
+
         </form>
     </div>
     
     @if(currentPage.getTotalRowCount == 0) {
         
         <div class="well">
-            <em>Nothing to display</em>
+            <em>No hay nada que mostrar</em>
         </div>
         
     } else {
+        @if(sortView) {
+        	
+        	<table id="sortable" class="zebra-striped">
+	            <thead>
+	                <tr>
+						<th>Nombre</th>
+	                	<th>Url</th>
+	                	<th>Pushable</th>                	
+	                </tr>
+	            </thead>
+	            <tbody>
+	
+	                @for(category <- currentPage.getList) {
+	                    <tr data-id="@category.idCategory">
+	                        <td><a href="#">@category.name</a></td>
+	                        <td>@category.feedUrl</td>
+	                        <td>
+	                            @if(category.pushable) {
+	                                Si
+	                            } else {
+	                                No
+	                            }
+	                        </td>                        
+	                    </tr>
+	                }
+	
+	            </tbody>
+        	</table>
+        	
+        } else {
         
-        <table class="computers zebra-striped">
-            <thead>
-                <tr>
-                    @header("name", "Name")
-                    @header("feedUrl", "Feed")
-                    @header("pushable", "Pushable")
-                </tr>
-            </thead>
-            <tbody>
-
-                @for(category <- currentPage.getList) {
-                    <tr data-id="@category.idCategory">
-                        <td><a href="@controllers.routes.Tvn.edit(category.idCategory)">@category.name</a></td>
-                        <td>@category.feedUrl</td>
-                        <td>
-                            @if(category.pushable) {
-                                Si
-                            } else {
-                                No
-                            }
-                        </td>                        
-                    </tr>
-                }
-
-            </tbody>
-        </table>
-
-        <div id="pagination" class="pagination">
-            <ul>
-                @if(currentPage.hasPrev) {
-                    <li class="prev">
-                        <a href="@link(currentPage.getPageIndex - 1, null)">&larr; Previous</a>
-                    </li>
-                } else {
-                    <li class="prev disabled">
-                        <a>&larr; Previous</a>
-                    </li>
-                }
-                <li class="current">
-                    <a>Displaying @currentPage.getDisplayXtoYofZ(" to "," of ")</a>
-                </li>
-                @if(currentPage.hasNext) {
-                    <li class="next">
-                        <a href="@link(currentPage.getPageIndex + 1, null)">Next &rarr;</a>
-                    </li>
-                } else {
-                    <li class="next disabled">
-                        <a>Next &rarr;</a>
-                    </li>
-                }
-            </ul>
-        </div>
+			<table class="zebra-striped">
+	            <thead>
+	                <tr>
+	                    @header("name", "Nombre")
+	                    @header("feedUrl", "Url")
+	                    @header("pushable", "Pushable")
+	                </tr>
+	            </thead>
+	            <tbody>
+	
+	                @for(category <- currentPage.getList) {
+	                    <tr data-id="@category.idCategory">
+	                        <td><a href="@controllers.routes.Tvn.edit(category.idCategory)">@category.name</a></td>
+	                        <td>@category.feedUrl</td>
+	                        <td>
+	                            @if(category.pushable) {
+	                                Si
+	                            } else {
+	                                No
+	                            }
+	                        </td>                        
+	                    </tr>
+	                }
+	
+	            </tbody>
+	        </table>
+	
+	        <div id="pagination" class="pagination">
+	            <ul>
+	                @if(currentPage.hasPrev) {
+	                    <li class="prev">
+	                        <a href="@link(currentPage.getPageIndex - 1, null)">&larr; Anterior</a>
+	                    </li>
+	                } else {
+	                    <li class="prev disabled">
+	                        <a>&larr; Anterior</a>
+	                    </li>
+	                }
+	                <li class="current">
+	                    <a>Listando del @currentPage.getDisplayXtoYofZ(" al "," de ")</a>
+	                </li>
+	                @if(currentPage.hasNext) {
+	                    <li class="next">
+	                        <a href="@link(currentPage.getPageIndex + 1, null)">Próximo &rarr;</a>
+	                    </li>
+	                } else {
+	                    <li class="next disabled">
+	                        <a>Próximo &rarr;</a>
+	                    </li>
+	                }
+	            </ul>
+	        </div>        
+        
+        	
+        }
+        
         
     }
         
