Se eliminan y actualizan archivos para migracion a 2.3

--- a/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
@@ -145,7 +145,7 @@
 				        </li>     
                         
                         <li>		 
-                            <a href="@securesocial.controllers.routes.LoginPage.logout()">Salir</a>
+                            <a href="#">Salir</a>
                         </li>
                         				
                     </ul>
