Se eliminan y actualizan archivos para migracion a 2.3 (reverted from commit 8ddbc36d0856ea4699517a535bef6bf6d4259bb1)

--- a/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
@@ -145,7 +145,7 @@
 				        </li>     
                         
                         <li>		 
-                            <a href="#">Salir</a>
+                            <a href="@securesocial.controllers.routes.LoginPage.logout()">Salir</a>
                         </li>
                         				
                     </ul>
